add modloader type from online json file + begin of console implement